# MBridge

./: .gitignore  CMakeLists.txt  LICENSE  MBridge.code-workspace  README.md  build.sh  test_app  test_app.cpp
.github/workflows/: build.yml  test.yml
Source/: JuceHeader.h
Source/Audio/: AudioCallback.cpp  AudioCallback.h  AudioEngine.cpp  AudioEngine.h
Source/Audio/Devices/: AudioDeviceManager.cpp  AudioDeviceManager.h
Source/Audio/Processing/: BufferProcessor.cpp  BufferProcessor.h
Source/Core/: Logger.cpp  Logger.h  Main.cpp  MainComponent.cpp  MainComponent.h
Source/UI/: MonitoringSlotComponent.cpp  MonitoringSlotComponent.h
Source/UI/Meters/: MeterComponent.cpp  MeterComponent.h
Source/UI/RTA/: RTAComponent.cpp  RTAComponent.h
Tests/: CMakeLists.txt  TestMain.cpp
Tests/Audio/: AudioTests.cpp
Tests/Core/: CoreTests.cpp
Tests/Integration/: IntegrationTests.cpp
Tests/Processing/: ProcessingTests.cpp
Tests/Utilities/: TestUtils.h
custom_modes/: plan_instructions.md
docs/: activeContext.md  architecture.md  development.md  productContext.md  progress.md  projectbrief.md  status.md  systemPatterns.md  tasks.md  techContext.md  technical.md
